crates/murphy-plugin-macros/tests/ui/fail_node_pattern_sym_capture.stderr
error: node_pattern!: symbol slot only accepts a `:sym` literal or `_`
 --> tests/ui/fail_node_pattern_sym_capture.rs:4:1
  |
4 | murphy_plugin_macros::node_pattern!(m, "(send nil? $_)");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `murphy_plugin_macros::node_pattern` (in Nightly builds, run with -Z macro-backtrace for more info)
